{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 153,
  "lineage": "3dbbfb19-3162-e5c3-ddd6-8c2c11ccde40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbcf3f2c5182003d",
            "arn": "arn:aws:ec2:us-east-1:906878514194:elastic-ip/eipalloc-0bbcf3f2c5182003d",
            "domain": "vpc",
            "id": "eipalloc-0bbcf3f2c5182003d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-209-152-114.compute-1.amazonaws.com",
            "public_ip": "44.209.152.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_igw_eip",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_igw_eip",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:internet-gateway/igw-0e280ddf50a639fbf",
            "id": "igw-0e280ddf50a639fbf",
            "owner_id": "906878514194",
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_igw",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_igw",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbcf3f2c5182003d",
            "association_id": "eipassoc-0ee78585639d3f03f",
            "connectivity_type": "public",
            "id": "nat-016636bde63c41044",
            "network_interface_id": "eni-0b3be176b2687f0b7",
            "private_ip": "10.0.101.82",
            "public_ip": "44.209.152.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05422e11a2644c690",
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_nat_gateway",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_nat_gateway",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:route-table/rtb-0fb8a3655f0b4f25b",
            "id": "rtb-0fb8a3655f0b4f25b",
            "owner_id": "906878514194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-016636bde63c41044",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_private_rtb",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_private_rtb",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:route-table/rtb-0196429b4d2c57870",
            "id": "rtb-0196429b4d2c57870",
            "owner_id": "906878514194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e280ddf50a639fbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_public_rtb",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_public_rtb",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b23b5bd63dc4e5",
            "route_table_id": "rtb-0fb8a3655f0b4f25b",
            "subnet_id": "subnet-00966f5c8736b3048"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f3aaa780150f2d8",
            "route_table_id": "rtb-0fb8a3655f0b4f25b",
            "subnet_id": "subnet-099f461334a3e8bba"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a611713ddfc7fb74",
            "route_table_id": "rtb-0fb8a3655f0b4f25b",
            "subnet_id": "subnet-0e61a7a05e786e3a7"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e239a870d42e5e",
            "route_table_id": "rtb-0196429b4d2c57870",
            "subnet_id": "subnet-05422e11a2644c690"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00150aadd390b677a",
            "route_table_id": "rtb-0196429b4d2c57870",
            "subnet_id": "subnet-0955aa54f547c6649"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c626bcd78ec5b06",
            "route_table_id": "rtb-0196429b4d2c57870",
            "subnet_id": "subnet-034b982f82671c2f5"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:security-group/sg-0d391384bd0035b60",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d391384bd0035b60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from the VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241110141853035800000001",
            "name_prefix": "terraform-",
            "owner_id": "906878514194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "terraform-demo",
              "Name": "demo_default_sg",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "demo_default_sg",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-00966f5c8736b3048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00966f5c8736b3048",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "private_subnet_1",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "private_subnet_1",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-099f461334a3e8bba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099f461334a3e8bba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "private_subnet_2",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "private_subnet_2",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-0e61a7a05e786e3a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e61a7a05e786e3a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "private_subnet_3",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "private_subnet_3",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-05422e11a2644c690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05422e11a2644c690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "public_subnet_1",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "public_subnet_1",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-0955aa54f547c6649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955aa54f547c6649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "public_subnet_2",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "public_subnet_2",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:subnet/subnet-034b982f82671c2f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034b982f82671c2f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "906878514194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "terraform-demo",
              "Name": "public_subnet_3",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Name": "public_subnet_3",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "vpc_id": "vpc-0a8893d48cb420888"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906878514194:vpc/vpc-0a8893d48cb420888",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e217489d879e0aae",
            "default_route_table_id": "rtb-0e7d74c41d2b674f5",
            "default_security_group_id": "sg-0805430d7753b2bd6",
            "dhcp_options_id": "dopt-066a595b8656f5a17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8893d48cb420888",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7d74c41d2b674f5",
            "owner_id": "906878514194",
            "tags": {
              "Application": "terraform-demo",
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            },
            "tags_all": {
              "Application": "terraform-demo",
              "Env": "default",
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Service": "ec2-demo_vpc-us-east-1",
              "Terraform": "true",
              "Theme": "ap-management-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:906878514194:instance/i-0d2384bed3153def7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2384bed3153def7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3d0fd3460789b55",
            "private_dns": "ip-10-0-101-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.136",
            "public_ip": "34.235.149.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Env": "default"
                },
                "tags_all": {
                  "Env": "default"
                },
                "throughput": 0,
                "volume_id": "vol-01521ee45df2423ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05422e11a2644c690",
            "tags": {
              "Environment": "Training",
              "Name": "Server from Module"
            },
            "tags_all": {
              "Env": "default",
              "Environment": "Training",
              "Name": "Server from Module"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d391384bd0035b60"
            ]
          },
          "dependencies": [
            "aws_security_group.default_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}